add 'make pep' and update 'make type' targets

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,15 @@ data =
 [bdist_wheel]
 universal = 1
 
+[pycodestyle]
+max-line-length = 127
+ignore = E301,E302,E305,E306,E701
+# E301 Add missing blank line. (expected 1 blank line, found 0)
+# E302 Add missing 2 blank lines. (expected 2 blank lines, found 0)
+# E305 - (expected 2 blank lines after end of function or class)
+# E306 - (expected 1 blank line before a nested definition)
+# E701 Put colon-separated compound statement on separate lines. (multiple statements on one line (colon))
+
 [mypy]
 ## strict = true # not allowed in setup.cfg
 unused_configs = true
