enable unittests in github actions

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -2,7 +2,7 @@ name: basic unit tests
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, master ]
   pull_request:
     branches: [ develop, master ]
 
