--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -33,7 +33,7 @@ jobs:
         xml=`find $HOME/.local/lib -name xmlrunner`
         echo "found xml=$xml"
         sed -i -e "s:test_runner.output.write(xml_content):test_runner.output.write(xml_content.decode('utf-8')):"  "$xml/result.py"
-    - name: 'make tests (testsuite.py without coverage)'
+    - name: 'make tests (tests.py without coverage)'
       run: |
         make tests -C software || true
     - name: 'find xml'
