--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -39,6 +39,11 @@ jobs:
     - name: 'find xml'
       run: |
         find . -name '*.xml'
+    - uses: actions/upload-artifact@v2  # upload test results
+      if: success()
+      with:
+        name: test-results
+        path: '**/Test-*.xml'
     - name: 'attach testresults'
       if: ${{ github.event_name == 'pull_request' && success() }}
       uses: EnricoMi/publish-unit-test-result-action@v1
