--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 
 [metadata]
 name = docker-copyedit
-version = 1.4.4091
+version = 1.4.4311
 license = EUPL
 license_files = 
    EUPL-LICENSE.md
@@ -10,7 +10,8 @@ author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
 home-page = https://github.com/gdraheim/docker-copyedit
 description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
-long-description = file: README.md
+long-description = README.md
+long_description_content_type = text/markdown
 requires-dist = setuptools
 
 [options]
