--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,8 @@ author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
 home-page = https://github.com/gdraheim/docker-copyedit
 description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
-long-description = README.md
-long_description_content_type = text/markdown
+long-description = file: README.md
+long-description-content-type = text/markdown
 requires-dist = setuptools
 
 [options]
