ensure cleaner README for pypi.org uploads

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
 home-page = https://github.com/gdraheim/docker-copyedit
 description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
-long-description = file: README.md
+long-description = file: README
 long-description-content-type = text/markdown
 requires-dist = setuptools
 
