--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license_files =
 author = Guido U. Draheim
 author-email = Guido.Draheim@gmx.de
 home-page = https://github.com/gdraheim/docker-copyedit
-description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
+description = edit docker image metadata (including remove docker volume settings)
 long-description = file: README
 long-description-content-type = text/markdown
 requires-dist = setuptools
