update pip-install tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ scripts =
    docker-copyedit.pyi
 
 [options.data_files]
-data =
+data/docker_copyedit =
    EUPL-LICENSE.md
    RELEASENOTES.md
    docker-copyedit-tests.py
