drop docker-copyedit.pyi, add typehints to docker-copyedit.py, cleanup pylint problems, replace OK<->DRYRUN, package with strip_python3

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,8 @@ requires-dist = setuptools
 [options]
 include_package_data=True
 scripts =
-   docker-copyedit.py
-   docker-copyedit.pyi
+   tmp/docker-copyedit.py
+   tmp/docker-copyedit.pyi
 
 [options.data_files]
 data/docker_copyedit =
