--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   mypy:
     name: mypy typehints check
-    runs-on: 'ubuntu-20.04'
+    runs-on: 'ubuntu-latest'
     steps:
     - name: checkout docker-systemctl-replacement
       uses: actions/checkout@v2
